--- a/package.json
+++ b/package.json
@@ -56,21 +56,21 @@
     "@types/express": "4.16.1",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.4",
+    "@types/passport-jwt": "^3.0.3",
     "@types/supertest": "2.0.7",
-    "rxjs": "^6.5.4",
+    "firebase-admin": "^8.10.0",
     "jest": "24.7.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "prettier": "1.17.0",
+    "rxjs": "^6.5.4",
     "supertest": "4.0.2",
     "ts-jest": "24.0.2",
     "ts-node": "8.1.0",
     "tsc-watch": "2.2.1",
     "tsconfig-paths": "3.8.0",
     "tslint": "5.16.0",
-    "typescript": "3.7.2",
-    "firebase-admin": "^8.10.0",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
-    "@types/passport-jwt": "^3.0.3"
+    "typescript": "^3.8.0"
   },
   "jest": {
     "moduleFileExtensions": [
